2004-11-19  Raja R Harinath  <rharinath@novell.com>

	Integrate bootstrap build into 'make all'.  Most of the bootstrap
	targets are gone.
	* Makefile.am (SUBDIRS): Build current directory before 'runtime'.
	(tmpinst): Change location.
	(all-local): New.  Just invokes the build in mcs.
	(check-local): New.  Invokes 'run-test-profiles' in mcs.
	(get-monolite-latest): Update.  Move the unpacking code here,
	since 'monolite-bootstrap' is no more.
	(mcs-do-full-build): Don't set PATH.
	(tmpinst-dir-contents): Remove mcs.
	($(tmpinst)/bin/mcs): Now used only during 'make check'.
	($(tmpinst)/bin/mono): Don't set MONO_PATH.
	* README: Update to changes.

2004-11-18  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in: Disable static linking of mono if --disable-static is
	given. Fixes #69466.

2004-11-15  Martin Baulig  <martin@ximian.com>

	* runtime/net_2_0/Makefile.am (gac_assemblies_list): Added Mono.C5.

Fri Nov 12 17:56:26 CET 2004 Paolo Molaro <lupus@ximian.com>

	* configure.in, mono/mini/Makefile.am: control static
	linking of the mono binary with a configure option.

2004-11-12  Jonathan Pryor <jonpryor@vt.edu>

	* configure.in: Check for `struct dirent' members which don't
	  exist across all Unix platforms.

2004-11-08  Jonathan Pryor <jonpryor@vt.edu>

	* configure.in: Add new function/header/type checks for use by
	  MonoPosixHelper (the support directory).

2004-11-08  Raja R Harinath  <rharinath@novell.com>

	* configure.in (mcs_topdir, mcs_topdir_from_srcdir): New 'subst'ed
	variables.  Used to support both an in-tree mcs/ and a sibling
	mcs/ directory.
	* Makefile.am (mcs_topdir): Remove.
	(dist-hook): Distribute mcs/ as a subdirectory.
	* runtime/Makefile.am ($(monoone_DATA) $(monotwo_DATA) $(monobins_DATA)):
	Use mcs_topdir and mcs_topdir_from_srcdir.
	* runtime/net_1_1/Makefile.am (mscorlib.dll $(gac_assemblies) $(mdb_files)): 
	Likewise.
	(all-local): Depend on $(mdb_files) too.
	* runtime/net_2_0/Makefile.am: Likewise.
	